Fix wrap issue in about us section on smaller screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,6 +338,7 @@ header {
     flex-direction: row;
     flex: 1;
     align-self: stretch;
+    flex-wrap: wrap;
     gap: 20px;
     padding: 20px;
     background-color: var(--object-background-color);
